@@ -15,7 +15,6 @@
   </Configurations>
   <Contents>
     <File name="AssemblyInfo.cs" subtype="Code" buildaction="Compile" />
-    <File name="ChatView.cs" subtype="Code" buildaction="Compile" />
     <File name="EntryController.cs" subtype="Code" buildaction="Compile" />
     <File name="EntryHistoryModel.cs" subtype="Code" buildaction="Compile" />
     <File name="ChatViewManagerBase.cs" subtype="Code" buildaction="Compile" />
