@@ -1,3 +1,7 @@
+2008-06-02  Mirco Bauer <meebey@meebey.net> 
+
+	* ChatView.cs, Frontend.mdp: Delete obsolete ChatView.
+
 2008-04-01  Mirco Bauer <meebey@meebey.net> 
 
 	* AssemblyInfo.cs: Bumped version to 0.5.31
